--- a/index.html
+++ b/index.html
@@ -8,15 +8,37 @@
 </head>
 <body>
     <div>
-        <h1>Calculadora de gorjetas</h1>
+        <h1>Calculadora de Gorjetas</h1>
     </div>
     <div>
         <form>
             <label for="bill">
                 <p>Quanto ficou a conta?</p>
             </label>
+            <p>
+                R$ <input type="number" placeholder="100" nome="bill">
+            </p>
+            <label for="serviceQual">
+                <p>Como foi seu servicio?</p>
+            </label>
+            <p>
+                <select name="serviceQual" id="ServiceQual">
+                    <option disabled selected value="0">Escolha uma opção</option>
+                    <option value="0.3">30% - increivel</option>
+                    <option value="0.2">20% - bom</option>
+                    <option value="0.15">15% - aceptavel</option>
+                    <option value="0.1">10% - ruim</option>
+                    <option value="0.05">05% - péssimo</option>
+                </select>
+            </p>
+            <label for="´people">
+                <p>Quantas pessoas vão dividir a conta?</p>
+            </label>
+            <p>
+                <input type="number" placeholder="1" name="people" id="people"> pessoa(s)
+            </p>
+            <button type="submit">Calcular!</button>
         </form>
-    </div>
-    
+    </div> 
 </body>
 </html>
